--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 html, body {
     background: var(--color-amber-50);
-    padding: var(--spacing-3) var(--spacing-1);
+    padding: 0 var(--spacing-1);
 }
 
 h1 {
