--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,16 @@ html, body {
     padding: 0 var(--spacing-1);
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-kode-mono);
+}
+
 h1 {
     font-size: var(--font-size-4xl);
-    font-family: var(--font-kode-mono);
 }
 
 h2 {
     font-size: var(--font-size-2xl);
-    font-family: var(--font-kode-mono);
 }
 
 a {
