chore: add border-radius to code blocks

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,7 @@ article {
 
     div.code-block {
         margin: var(--spacing-6) 0 !important;
+        border-radius: var(--radius-md);
     }
 
     code {
